removing to_add an to_remove from rsu patch